# bevy_fixed_sprites

./: Cargo.toml  README.md
examples/: fixed_sprite.rs  hierarchy.rs  rotating.rs
src/: lib.rs
