[package]
name = "bevy_fixed_sprites"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "graphics", "sprites", "games", "render"]
categories = ["game-development", "graphics"]
repository = "https://github.com/ickshonpe/bevy_fixed_sprites"
readme = "README.md"
description = "Bevy sprites that don't rotate or scale with their transform"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_sprite",
    "png",
    "x11",
]
